# open-grip-board

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  compose.yml
backend/: Cargo.toml  dockerfile
backend/entity/: Cargo.toml
backend/entity/src/: climbers.rs  climbing_grades.rs  exercise_records.rs  exercise_templates.rs  favourite_gyms.rs  favourite_trainings.rs  grip_types.rs  gyms.rs  hangboard_grip_types.rs  hangboards.rs  lib.rs  measurement_points.rs  prelude.rs  profile_pics.rs  records.rs  training_exercises.rs  training_records.rs  training_templates.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251230_165846_seed_tables.rs
backend/src/: lib.rs  main.rs  tests.rs
backend/src/commands/: create_climber.rs  create_climbing_grade.rs  create_gym.rs  create_record.rs  mod.rs  new_climbing_grade.rs  new_gym.rs
backend/src/controllers/: climber.rs  climber_controller.rs  climbing_grade_controller.rs  gym.rs  hangboard_controller.rs  mod.rs
backend/src/dto/: mod.rs
backend/src/errors/: errors.rs  mod.rs
backend/src/guards/: auth_guard.rs  mod.rs  rate_limit_guard.rs
backend/src/repositories/: climber_repo.rs  climbing_grade_repo.rs  crud_repo.rs  gym_repo.rs  measurement_point_repo.rs  mod.rs  record_repo.rs
backend/src/services/: climber_service.rs  climbing_grade_service.rs  gym_service.rs  mod.rs  mqtt_service.rs  record_service.rs
backend/src/structs/: authenticated_user.rs  climber.rs  climbing_grade.rs  exercise_record.rs  exercise_template.rs  grip_type.rs  gym.rs  location.rs  (+8 more)
(+34 files in other folders)
